--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -30,6 +30,8 @@
     "passport": "^0.5.3",
     "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
